--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^18.0.0",
     "multer": "^1.4.5-lts.1",
     "ngx-papaparse": "^8.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
