--- a/Front-end/angular.json
+++ b/Front-end/angular.json
@@ -29,6 +29,8 @@
               }
             ],
             "styles": [
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
             ],
             "scripts": []
